Attempt to stop css transition flickering

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,20 +18,22 @@ body,h1{
 	transition:all .2s ease-out; 
 -o-transition:all .2s ease-out; 
 -moz-transition:all .2s ease-out; 
--webkit-transition:all .2s ease-out;	
+-webkit-transition:all .2s ease-out;
+transform:translate3d(0,0,0);
+-webkit-transform:translate3d(0,0,0);
 }
 
 body{
 	font-family: brandon-grotesque,sans-serif;
 	font-weight: 400;
 	font-style: normal;
+	background-color: #fff;
 	background-size: 60%;
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	&.color-intro{
 		background-image: url('https://dummyimage.com/2500x2500/ffffff/fff.png');
-		background-color: #fff;
 	}
 
 	// &.color-textures{
